# VideoFrameExtractor

./: .gitignore  README.md  TEORIA_VIDEO_PROCESSING.md  ejemplos_uso.py  main.py  pyproject.toml  requirements.txt  video_frame_extractor_cv2.py
