[project]
name = "videoframeextractor"
version = "0.2.0"
description = "CLI de alto rendimiento para extraer frames de videos usando Decord y Pillow"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Cristian"}
]
keywords = ["video", "decord", "frame-extractor", "image-processing", "cli", "typer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "decord>=0.6.0",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[project.scripts]
videoframeextractor = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]
